[package]
name = "im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio-tungstenite = "0.17.1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.17.0", features = ["full"] }
env_logger = "0.9"
