[package]
name = "im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3.0.0-beta.21"
timer="0.2.0"
chrono = "0.4"

env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = "1"
serde_json = "1"
futures-util = { version = "0.3.7", default-features = false, features = ["std", "sink"] }
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"
websocket="0.26.4"